--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,3 +23,13 @@ body {
     color: var(--foreground);
     font-family: var(--font-sans), Arial, Helvetica, sans-serif;
 }
+
+@layer utilities {
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+    .no-scrollbar {
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+    }
+}
