--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,11 @@
     :root {
         --background: #1a1a1a;
         --foreground: #ededed;
+        --content-total: 2;
+        --carousel-content-space-x: 8px;
+        --carousel-content-width: 200px;
+        --carousel-slide: slide-left;
+        --carousel-speed: 1000ms;
     }
 }
 
@@ -31,5 +36,54 @@ body {
     .no-scrollbar {
         -ms-overflow-style: none;
         scrollbar-width: none;
+    }
+}
+
+.carousel-container {
+    overflow: hidden;
+    min-width: 0;
+}
+
+.carousel-track {
+    min-width: 0px;
+    display: flex;
+    animation: var(--carousel-slide) linear var(--carousel-speed) infinite;
+}
+
+.carousel-content {
+    @apply h-auto aspect-auto shrink-0 w-[var(--carousel-content-width)];
+    margin-left: var(--carousel-content-space-x);
+    margin-right: var(--carousel-content-space-x);
+}
+/* 200px */
+@keyframes slide-left {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(
+            calc(
+                (
+                        var(--carousel-content-width) +
+                            (var(--carousel-content-space-x) * 2)
+                    ) * (var(--content-total) * -1)
+            )
+        );
+    }
+}
+
+@keyframes slide-right {
+    0% {
+        transform: translateX(
+            calc(
+                (
+                        var(--carousel-content-width) +
+                            (var(--carousel-content-space-x) * 2)
+                    ) * (var(--content-total) * -1)
+            )
+        );
+    }
+    100% {
+        transform: translateX(0);
     }
 }
